--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -68,7 +68,7 @@
                     </h1>
                     <div class="portfolio__list">
                         <div class="portfolio__list-wrap container">
-                            <div class="carousel  carousel--js-init-portfolio  carousel--css-skin-portfolio">
+                            <div class="carousel  carousel--js-init-portfolio  carousel--css-skin-portfolio carousel--css-disable-on-desktop">
                                 <div class="carousel__widget">
                                     <div class="swiper">
                                         <div class="swiper-wrapper">
