--- a/src/styles/_portfolio.css
+++ b/src/styles/_portfolio.css
@@ -8,7 +8,7 @@
     }
 
     .portfolio__list {
-        /*background-color: #0D25FF;*/
+        overflow: hidden; /* обрезаем пустые гексагоны */
     }
         .portfolio__list-wrap {
             padding-top: 50px;
