--- a/src/styles/_portfolio.css
+++ b/src/styles/_portfolio.css
@@ -1,25 +1,30 @@
 .portfolio {
     padding-top: 3px;
+    padding-bottom: 140px;
     display: flex;
     flex-direction: column;
 }
     .portfolio__heading {
-
+        margin-top: 51px;
+        margin-bottom: 0;
+        font-weight: 600;
+        font-size: 40px;
+        line-height: 49px;
+        text-align: center;
     }
 
     .portfolio__list {
         overflow: hidden; /* обрезаем пустые гексагоны */
     }
         .portfolio__list-wrap {
-            padding-top: 50px;
-            padding-bottom: 35px;
+            margin-top: 58px;
         }
             .portfolio__list-wrap .work {
 
             }
 
     .portfolio__map-heading {
-
+        display: none;
     }
 
     .portfolio__map {
@@ -49,7 +54,7 @@
             }
 
         .portfolio__map-heading {
-
+            display: block;
         }
 
         .portfolio__map {
