--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -328,8 +328,8 @@
                             </div>
                         </div>
                     </div>
-                    <h2 class="portfolio__map-heading">
-                        Локации наших работ
+                    <h2 class="portfolio__map-heading container">
+                        Локации наших&nbsp;работ
                     </h2>
                     <div class="portfolio__map">
                         <div class="geo">
