--- a/src/styles/_portfolio.css
+++ b/src/styles/_portfolio.css
@@ -75,15 +75,22 @@
 @media (width < 740px) {
 
     .portfolio {
-        /*padding-top: 3px;*/
+        padding-top: 0;
+        padding-bottom: 0;
         /*display: flex;*/
         /*flex-direction: column;*/
     }
         .portfolio__heading {
-
+            order: 1;
+            margin-top: 10px;
+            margin-bottom: 0;
+            font-size: 30px;
+            line-height: 37px;
         }
 
         .portfolio__list {
+            order: 2;
+            margin-top: 12px;
             background-color: #0D25FF;
             overflow: hidden; /* обрезаем карусель */
         }
@@ -93,10 +100,19 @@
             }
 
         .portfolio__map-heading {
+            order: 3;
+            margin-top: 28px;
+            margin-bottom: 0;
             display: block;
+            font-weight: 600;
+            font-size: 30px;
+            line-height: 37px;
+            text-align: center;
         }
 
         .portfolio__map {
+            order: 4;
+            margin-top: 18px;
             /*order: -1;*/
         }
 }
