--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -67,7 +67,7 @@
                         Проекты
                     </h1>
                     <div class="portfolio__list">
-                        <div class="portfolio__list-wrap container">
+                        <div class="portfolio__list-wrap">
                             <div class="carousel  carousel--js-init-portfolio  carousel--css-skin-portfolio carousel--css-disable-on-desktop">
                                 <div class="carousel__widget">
                                     <div class="swiper">
