solutions and product

--- a/src/layouts/service.html
+++ b/src/layouts/service.html
@@ -81,6 +81,31 @@
                             </p>
                         </div>
                     </div>
+                    <div class="solutions__list">
+                        <div class="solutions__item">
+                            <a class="product" href="#">
+                                <div class="product__preview">
+                                    <img class="product__image"
+                                         srcset="../temp/products/product-a@2x.jpg 2x"
+                                         src="../temp/products/product-a@1x.jpg"
+                                         width="396"
+                                         height="456"
+                                    >
+                                </div>
+                                <div class="product__overlay">
+                                    <h2 class="product__heading">
+                                        Дизельные электростанции ДЭС
+                                    </h2>
+                                    <div class="product__description">
+                                        Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя и системы
+                                    </div>
+                                    <div class="product__more">
+                                        Подробнее
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet asperiores assumenda aut, commodi consectetur deserunt explicabo fuga iusto laboriosam maiores maxime molestias natus nemo neque odio odit omnis, perferendis perspiciatis provident, quasi quis veritatis voluptate! Ad atque commodi magni molestiae nulla praesentium provident quaerat quam, quasi sed. Architecto asperiores, dicta doloremque enim eum labore, nihil nulla, porro praesentium quidem repellat saepe sequi vero. Amet dolor dolorem eaque itaque numquam quae quia sed vitae! Accusamus adipisci architecto, at consectetur cumque distinctio dolor enim excepturi exercitationem ipsam labore laboriosam maiores maxime modi molestiae nihil nobis obcaecati possimus quia, quibusdam reprehenderit sapiente.
                 </div>
             </div>
