--- a/src/layouts/service.html
+++ b/src/layouts/service.html
@@ -92,9 +92,10 @@
                                          height="456"
                                     >
                                 </div>
+                                <div class="product__color-overlay"></div>
                                 <div class="product__overlay">
                                     <h2 class="product__heading">
-                                        Дизельные электростанции ДЭС
+                                        Газо-поршневые установки&nbsp;ГПУ
                                     </h2>
                                     <div class="product__description">
                                         Газопоршневые установки являются самостоятельным электрогенерирующим устройством, состоящим из смонтированного в блок-модуле специальной конструкции газопоршневого двигателя и системы
