--- a/src/styles/_product.css
+++ b/src/styles/_product.css
@@ -28,18 +28,78 @@
             transition: opacity var(--transition-hover);
         }
 
+    .product__color-overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #3B64EC;
+        mix-blend-mode: multiply;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity var(--transition-hover),
+                    visibility var(--transition-hover);
+    }
 
-.product__overlay {
+    .product:hover .product__color-overlay {
+        opacity: 1;
+        visibility: visible;
+    }
 
+    .product__overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 16px;
+        color: #FFFFFF;
+        text-align: center;
+    }
+
+    .product:hover .product__overlay {
+        opacity: 1;
+        visibility: visible;
     }
         .product__heading {
+            font-size: 22px;
+            line-height: 27px;
+        }
 
+        .product:hover .product__heading {
+            animation: slide-up 500ms ease;
         }
 
         .product__description {
+            margin-top: 8px;
+            font-size: 20px;
+            line-height: 24px;
+            display: none;
+        }
 
+        .product:hover .product__description {
+            display: block;
+            animation: slide-up 500ms ease;
         }
 
         .product__more {
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 8px;
+            width: fit-content;
+            border: 1px solid currentColor;
+            padding: 5px 22px 3px;
+            font-weight: bold;
+            font-size: 16px;
+            display: none;
+        }
 
+        .product:hover .product__more {
+            display: block;
+            animation: slide-up 500ms ease;
         }
